# color-Tool-for-dead-cells

./: CMakeLists.txt  LICENSE  README.md
colorTool_install/: colorTool_install.vdproj
colorTool_v2/: colorTool_v2.cpp  colorTool_v2.sln  colorTool_v2.vcxproj  colorTool_v2.vcxproj.filters
colorTool_v2/x64/Release/: colorTool_v2.exe.recipe  colorTool_v2.iobj  colorTool_v2.ipdb  colorTool_v2.vcxproj.FileListAbsolute.txt
colorTool_v2/x64/Release/colorTool_v2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  colorTool_v2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
colorTool_v2_english/: colorTool_v2_english.vcxproj  colorTool_v2_english.vcxproj.filters
colorTool_v2_english/x64/Release/: colorTool_v2_english.exe.recipe  colorTool_v2_english.iobj  colorTool_v2_english.ipdb
colorTool_v2_english/x64/Release/colorToo.ca3a0d2a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  colorTool_v2_english.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
color_quick/: color_quick.cpp  color_quick.vcxproj  color_quick.vcxproj.filters
color_quick/x64/Release/: color_quick.exe.recipe  color_quick.iobj  color_quick.ipdb
color_quick/x64/Release/color_quick.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
color_quick_GUI/: color_quick_GUI.cpp  color_quick_GUI.h  color_quick_GUI.qrc  color_quick_GUI.ui  color_quick_GUI.vcxproj  color_quick_GUI.vcxproj.filters  main.cpp
color_quick_GUI/x64/Release/: color_quick_GUI.exe.recipe
model_create/: 算法.txt
src/: colorTool_v2.cpp  colorTool_v2_english.cpp
(+19 files in other folders)
